composer require debu --dev + composer unpack debug

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,12 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "easycorp/easy-log-handler": "^1.0.7",
         "sensiolabs/security-checker": "^6.0",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/debug-bundle": "*",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/profiler-pack": "*",
+        "symfony/var-dumper": "*"
     },
     "config": {
         "preferred-install": {
